# miniaudio_rs

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
c_examples/: simple_capture.c  simple_duplex.c  simple_loopback.c  simple_looping.c  simple_mixing.c  simple_playback.c
src/: get_devices.rs  lib.rs  loopback_to_buffer.rs  main.rs  miniaudio_rs.rs  miniaudio_rs_sys.rs  simple_capture.rs  simple_loopback.rs  simple_looping.rs
